# goldfish-guards

./: .gitignore  LICENSE  README.md  TEMPLATE.fold.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROVENANCE.md
src/goldfish_guards/: __main__.py  cli.py  config.py  fold_completeness.py  fold_scaffold.py  secret_scan.py
tests/: test_cli.py  test_config.py  test_fold_completeness.py  test_secret_scan.py
tests/fixtures/fold_ledger/: real_prose_verdict.md
